--- a/Rosovina/Modules/Login/Views/LoginView.xib
+++ b/Rosovina/Modules/Login/Views/LoginView.xib
@@ -63,7 +63,7 @@
                         <action selector="getStartedClicked:" destination="-1" eventType="touchUpInside" id="PGK-N6-2bC"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Or Continue with one click" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s7t-YK-emy">
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Or Continue with one click" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s7t-YK-emy">
                     <rect key="frame" x="96.666666666666671" y="668.66666666666663" width="199.66666666666663" height="20.333333333333371"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.28235294119999998" green="0.3921568627" blue="0.47843137250000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -351,7 +351,7 @@
                         <constraint firstAttribute="trailing" secondItem="Pkn-8y-XRL" secondAttribute="trailing" constant="60" id="Vsa-pL-mVh"/>
                     </constraints>
                 </stackView>
-                <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Rle-1k-qzW">
+                <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Rle-1k-qzW">
                     <rect key="frame" x="116.00000000000001" y="713" width="161.33333333333337" height="47"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ssB-OK-55Q">
